--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body>
     <div class="container">
         <div class="content">
-            <h1>Grafia Cripto</h1>
+            <h1>Grafia Cripto!</h1>
             <label for="mensagemNormal">Digite sua mensagem:</label><br>
             <textarea id="mensagemNormal" rows="4" cols="50"></textarea><br>
 
